<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetaildedPostActivity">


    <TextView
        android:id="@+id/text_details_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:text="@string/post_title" />

    <TextView
        android:id="@+id/text_details_post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:text="@string/post_description" />

    <Button
        android:id="@+id/button_edit_details_post"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:text="@string/post_modify_button"
        android:textColor="#fff"
        android:textSize="22sp" />

</LinearLayout>